--- a/whale_analysis.ipynb
+++ b/whale_analysis.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -209,7 +209,7 @@
        "[1060 rows x 4 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,6 @@
     {
      "data": {
       "text/plain": [
-       "Date                           0\n",
        "SOROS FUND MANAGEMENT LLC      1\n",
        "PAULSON & CO.INC.              1\n",
        "TIGER GLOBAL MANAGEMENT LLC    1\n",
@@ -258,7 +257,6 @@
     {
      "data": {
       "text/plain": [
-       "Date                           0\n",
        "SOROS FUND MANAGEMENT LLC      0\n",
        "PAULSON & CO.INC.              0\n",
        "TIGER GLOBAL MANAGEMENT LLC    0\n",
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -402,7 +400,7 @@
        "[1241 rows x 2 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -423,17 +421,17 @@
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2015-03-02', '2015-03-03', '2015-03-04', '2015-03-05',\n",
-       "               '2015-03-06', '2015-03-09', '2015-03-10', '2015-03-11',\n",
-       "               '2015-03-12', '2015-03-13',\n",
+       "DatetimeIndex(['2015-03-03', '2015-03-04', '2015-03-05', '2015-03-06',\n",
+       "               '2015-03-09', '2015-03-10', '2015-03-11', '2015-03-12',\n",
+       "               '2015-03-13', '2015-03-16',\n",
        "               ...\n",
        "               '2019-04-17', '2019-04-18', '2019-04-22', '2019-04-23',\n",
        "               '2019-04-24', '2019-04-25', '2019-04-26', '2019-04-29',\n",
        "               '2019-04-30', '2019-05-01'],\n",
-       "              dtype='datetime64[ns]', name='Date', length=1060, freq=None)"
+       "              dtype='datetime64[ns]', name='Date', length=1059, freq=None)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -462,7 +460,7 @@
        "              dtype='datetime64[ns]', name='Date', length=1241, freq=None)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -667,7 +665,7 @@
        "[1251 rows x 6 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -686,25 +684,24 @@
     {
      "data": {
       "text/plain": [
-       "Date      0.000000\n",
        "Algo 1    0.000000\n",
-       "Algo 2    0.483481\n",
+       "Algo 2    0.004835\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count nulls\n",
-    "algo.isnull().mean() * 100"
+    "algo.isnull().mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -712,13 +709,12 @@
     {
      "data": {
       "text/plain": [
-       "Date      0.0\n",
        "Algo 1    0.0\n",
        "Algo 2    0.0\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +722,7 @@
    "source": [
     "# Drop nulls\n",
     "algo = algo.dropna()\n",
-    "algo.isnull().mean() * 100"
+    "algo.isnull().mean()"
    ]
   },
   {
@@ -740,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -848,7 +844,7 @@
        "[1649 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,127 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Close</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>23-Apr-19</td>\n",
-       "      <td>$2933.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>22-Apr-19</td>\n",
-       "      <td>$2907.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18-Apr-19</td>\n",
-       "      <td>$2905.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17-Apr-19</td>\n",
-       "      <td>$2900.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>16-Apr-19</td>\n",
-       "      <td>$2907.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1644</th>\n",
-       "      <td>5-Oct-12</td>\n",
-       "      <td>$1460.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1645</th>\n",
-       "      <td>4-Oct-12</td>\n",
-       "      <td>$1461.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1646</th>\n",
-       "      <td>3-Oct-12</td>\n",
-       "      <td>$1450.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1647</th>\n",
-       "      <td>2-Oct-12</td>\n",
-       "      <td>$1445.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1648</th>\n",
-       "      <td>1-Oct-12</td>\n",
-       "      <td>$1444.49</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1649 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Date     Close\n",
-       "0     23-Apr-19  $2933.68\n",
-       "1     22-Apr-19  $2907.97\n",
-       "2     18-Apr-19  $2905.03\n",
-       "3     17-Apr-19  $2900.45\n",
-       "4     16-Apr-19  $2907.06\n",
-       "...         ...       ...\n",
-       "1644   5-Oct-12  $1460.93\n",
-       "1645   4-Oct-12  $1461.40\n",
-       "1646   3-Oct-12  $1450.99\n",
-       "1647   2-Oct-12  $1445.75\n",
-       "1648   1-Oct-12  $1444.49\n",
-       "\n",
-       "[1649 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sp500_2 = sp500.copy()\n",
-    "sp500_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -994,7 +870,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -1114,20 +990,20 @@
        "[1649 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fix Data Types\n",
-    "sp500_2['Close'] = sp500['Close'].str.replace('$', '').str.replace(',', '').astype(\"float\")\n",
-    "sp500_2"
+    "sp500['Close'] = sp500['Close'].str.replace('$', '').str.replace(',', '').astype(\"float\")\n",
+    "sp500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -1135,12 +1011,12 @@
     {
      "data": {
       "text/plain": [
-       "Date     object\n",
-       "Close    object\n",
+       "Date      object\n",
+       "Close    float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,18 +1027,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sp500_csv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate Daily Returns\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m daily_returns \u001b[38;5;241m=\u001b[39m (\u001b[43msp500_csv\u001b[49m \u001b[38;5;241m-\u001b[39m sp500_csv\u001b[38;5;241m.\u001b[39mshift(\u001b[38;5;241m1\u001b[39m)) \u001b[38;5;241m/\u001b[39m sp500_csv\u001b[38;5;241m.\u001b[39mshift(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m daily_returns\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sp500_csv' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate Daily Returns\n"
+    "# Calculate Daily Returns\n",
+    "daily_returns = (sp500 - sp500_csv.shift(1)) / sp500_csv.shift(1)\n",
+    "daily_returns.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -1173,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
